Tim Hatch update

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.20 $
+# Revision $Revision: 1.21 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -59,8 +59,11 @@ jmri.jmrix.lenz.mon.XNetMonAction =                 Open XPressNet Monitor
 jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
+
+jmri.jmrix.tchtech.serial.serialmon.SerialMonAction = Open TCH Technology Node Interface Card Monitor
 jmri.jmrix.powerline.serialmon.SerialMonAction =    Open Powerline Monitor
 jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packet
+
 jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
 
 jmri.jmrix.qsi.qsimon.QsiMonAction =                Open QSI Monitor
