--- a/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
+++ b/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
@@ -1,9 +1,18 @@
 # AlignTableBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.rps.aligntable package
 
-WindowTitle     = RPS Alignment
+WindowTitle     = RPS Receiver Control
 
-TitleColNum     = Number
+TitleColNum     = Receiver
+TitleColX       = X
+TitleColY       = Y
+TitleColZ       = Z
+
+LabelNumCol     = Number of Receivers:
+LabelVSound     = V Sound:
+LabelOffset     = Offset:
+
+ButtonSet       = Set
