minor reordering.  RPS 2 update

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.21 $
+# Revision $Revision: 1.22 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -49,32 +49,40 @@ jmri.jmrit.jython.JythonWindow =                    Open Script Output Window
 jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 
 # selected items from systems menus
+jmri.jmrix.acela.acelamon.AcelaMonAction =          Open Acela Monitor
+
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
-jmri.jmrix.acela.acelamon.AcelaMonAction =    Open Acela Monitor
+
 jmri.jmrix.easydcc.easydccmon.EasyDccMonAction =    Open EasyDCC Monitor
+
 jmri.jmrix.grapevine.serialmon.SerialMonAction =    Open Grapevine Monitor
 jmri.jmrix.grapevine.nodetable.NodeTableAction =    Open Grapevine Node Table
 jmri.jmrix.grapevine.packetgen.SerialPacketGenAction = Open Grapevine Send Packet
+
 jmri.jmrix.lenz.mon.XNetMonAction =                 Open XPressNet Monitor
+
 jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
+
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 
-jmri.jmrix.tchtech.serial.serialmon.SerialMonAction = Open TCH Technology Node Interface Card Monitor
 jmri.jmrix.powerline.serialmon.SerialMonAction =    Open Powerline Monitor
 jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packet
 
-jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
-
 jmri.jmrix.qsi.qsimon.QsiMonAction =                Open QSI Monitor
 jmri.jmrix.qsi.packetgen.PacketGenAction =          Open QSI Send Packet
+
+jmri.jmrix.tchtech.serial.serialmon.SerialMonAction = Open TCH Technology Node Interface Card Monitor
+
+jmri.jmrix.zimo.zimomon.Mx1MonAction =              Open Zimo Monitor
 
 jmri.jmrix.jinput.treecontrol.TreeAction =          Open USB Input Control
 jmri.jmrix.libusb.UsbViewAction =                   Open USB Device Viewer
 
 # RPS items
+jmri.jmrix.rps.aligntable.AlignTableAction =        Open RPS Receiver Control
+jmri.jmrix.rps.swing.polling.PollTableAction =      Open RPS Polling Control
+jmri.jmrix.rps.swing.debugger.DebuggerAction =      Open RPS Debugger
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
-jmri.jmrix.rps.display.DisplayAction    =           Open RPS Calculations Display
-jmri.jmrix.rps.DataSourceAction         =           Open RPS Connection
 jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction= Open RPS Tracking Display
 jmri.jmrix.rps.reversealign.AlignmentPanelAction =  Open RPS Alignment Tool
