Giorgio Terdina patch 1969893 allow manual address selection

--- a/jmri/jmrix/lenz/xntcp/XnTcpBundle.properties
+++ b/jmri/jmrix/lenz/xntcp/XnTcpBundle.properties
@@ -1,7 +1,7 @@
 # XnTcpBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.lenz.xntcp adapter
 
-Error1  = Connection with XnTcp lost. Check coonection cables and restart the program.
+Error1  = Connection with XnTcp lost. Check connection cables and restart the program.
