handle save on close

--- a/jmri/jmrix/rps/swing/polling/PollingBundle.properties
+++ b/jmri/jmrix/rps/swing/polling/PollingBundle.properties
@@ -1,6 +1,6 @@
 # PollingBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.rps.swing.polling package
 
@@ -14,4 +14,9 @@ TitleTypeCol        = Method
 
 LabelPoll           = Poll
 LabelDelay          = Interval
+LabelSetDefault     = Store New Default Values
 
+WarnChanged         = This window contains changed values.\nDo you want to store new default values?
+LabelYesSave        = Yes, save defaults and close
+LabelNoClose        = No, just close
+WarnTitle           = Warning
