--- a/jmri/util/UtilBundle.properties
+++ b/jmri/util/UtilBundle.properties
@@ -1,11 +1,11 @@
 # UtilBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.util package
 
 
-WarnChanged         = This window contains changed values.\nDo you want to store new default values?
-LabelYesSave        = Yes, save defaults and close
-LabelNoClose        = No, just close
-WarnTitle           = Warning
+WarnChangedMsg      = This window contains changed values.\nDo you want to store them?
+WarnChangedTitle    = Warning
+WarnYesSave         = Yes, save values and close
+WarnNoClose         = No, just close
