--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.22 $
+# Revision $Revision: 1.23 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -71,6 +71,10 @@ jmri.jmrix.powerline.packetgen.SerialPacketGenAction = Open Powerline Send Packe
 
 jmri.jmrix.qsi.qsimon.QsiMonAction =                Open QSI Monitor
 jmri.jmrix.qsi.packetgen.PacketGenAction =          Open QSI Send Packet
+
+jmri.jmrix.srcp.srcpmon.SRCPMonAction =             Open SRCP Monitor
+jmri.jmrix.srcp.packetgen.PacketGenAction =         Open SRCP Message Tool
+
 
 jmri.jmrix.tchtech.serial.serialmon.SerialMonAction = Open TCH Technology Node Interface Card Monitor
 
