reorder, add SRCP

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.20 $
+# Revision $Revision: 1.21 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -12,23 +12,23 @@ MenuTools    = Systems
 MenuSystems = Systems
 
 
-MenuItemTCHTech = TCHTechnology
-
 MenuItemAcela = Acela
-
 MenuItemCMRI = CMRI
+MenuItemDirect = DirectDrive
 MenuItemEasyDCC = EasyDCC
 MenuItemLocoNet = LocoNet
+MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemNCE = NCE
+MenuItemOakTree = Oak Tree
 MenuItemSPROG = SPROG
+MenuItemTCHTech = TCHTechnology
+MenuItemTMCC = TMCC (Lionel)
+MenuItemSECSI = SECSI
+MenuItemSRCP = SRCP
 MenuItemWangrow = Wangrow
 MenuItemXPressNet = XPressNet
 MenuItemXPA = XPA
 MenuItemZimo = Zimo
-MenuItemDirect = DirectDrive
-MenuItemTMCC = TMCC (Lionel)
-MenuItemOakTree = Oak Tree
-MenuItemMRC = Model Rectifier Corp (MRC)
 
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
