--- a/jmri/jmrix/rps/swing/polling/PollingBundle.properties
+++ b/jmri/jmrix/rps/swing/polling/PollingBundle.properties
@@ -1,6 +1,6 @@
 # PollingBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.rps.swing.polling package
 
@@ -11,6 +11,9 @@ TitleAddrCol        = Locomotive Address
 TitlePollCol        = Polled
 TitleLongCol        = Long
 TitleTypeCol        = Method
+TitleXCol           = Last X
+TitleYCol           = Last Y
+TitleZCol           = Last Z
 
 LabelPoll           = Poll
 LabelDelay          = Interval
