BSC control in GUI

--- a/jmri/jmrix/rps/swing/polling/PollingBundle.properties
+++ b/jmri/jmrix/rps/swing/polling/PollingBundle.properties
@@ -1,6 +1,6 @@
 # PollingBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.rps.swing.polling package
 
@@ -16,6 +16,7 @@ TitleYCol           = Last Y
 TitleZCol           = Last Z
 
 LabelPoll           = Poll
+LabelBscMode        = Use BSC Poll
 LabelDelay          = Interval
 LabelSetDefault     = Store New Default Values
 
