initial PR3 support

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.23 $
+# Revision $Revision: 1.24 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -63,6 +63,9 @@ jmri.jmrix.lenz.mon.XNetMonAction =                 Open XPressNet Monitor
 
 jmri.jmrix.loconet.locomon.LocoMonAction =          Open LocoNet Monitor
 jmri.jmrix.loconet.slotmon.SlotMonAction =          Open LocoNet Slot Monitor
+jmri.jmrix.loconet.clockmon.ClockMonAction =        Open LocoNet Clock Monitor
+jmri.jmrix.loconet.locostats.LocoStatsAction =      Open LocoNet Status Window
+jmri.jmrix.loconet.pr3.swing.Pr3SelectAction =      Open LocoNet PR3 Tool
 
 jmri.jmrix.nce.ncemon.NceMonAction =                Open NCE Monitor
 
