--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -24,3 +24,4 @@ MenuItemDownload            = Download Firmware
 MenuItemSoundload           = Download Sounds
 MenuItemSoundEditor         = Edit SPJ Sound File
 MenuItemSetID               = Configure LocoNet ID
+MenuItemPr3ModeSelect       = Select PR3 Mode
