--- a/jmri/jmrix/rps/swing/polling/PollingBundle.properties
+++ b/jmri/jmrix/rps/swing/polling/PollingBundle.properties
@@ -1,8 +1,8 @@
 # PollingBundle.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
-# Default properties for the jmri.rps.swing.polling package
+# Default properties for the jmri.jmrix.rps.swing.polling package
 
 TitlePolling        = RPS Polling Control
 
