Found handling of transition time was displaying without the decimal part, so it would round all the time. Still some weird things with the lights however. Also I updated the shtml but having problems with commiting it to cvs.

--- a/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
+++ b/jmri/jmrit/simplelightctrl/SimpleLightCtrlBundle.properties
@@ -1,6 +1,6 @@
 # SimpleLightCtrlBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.jmrit.simplelightctrl GUI elements
 
@@ -21,7 +21,7 @@ LightAdrLabel = Light:
 LightAdrTextToolTip = light number being controlled
 LightGetStatusButton = Get Status
 LightGetStatusToolTip = Press to get current status
-LightStatusLabel = current state:
+LightStatusLabel = Current State:
 LightStatusTextDefault = <unknown>
 LightIsEnabledLabel = Enabled:
 LightIsVariableLabel = Variable:
@@ -40,7 +40,7 @@ LightMaxIntensityLabel = Max Intensity:
 LightMaxIntensityToolTip = Intensity for on, 0% to 100%
 LightTransitionTimeLabel = Transition Time: 
 LightTransitionTimeToolTip = Speed of dimming, fast minutes for 0% to 100%
-LightSetButton = Dim/Bright
-LightSetButtonToolTip = Press to set intensity
+LightSetButton = Change Intensity
+LightSetButtonToolTip = Press to set target intensity
 LightApplyButton = Apply
 LightApplyButtonToolTip = Press to apply settings
