--- a/jmri/jmrix/rps/swing/polling/PollingBundle.properties
+++ b/jmri/jmrix/rps/swing/polling/PollingBundle.properties
@@ -1,6 +1,6 @@
 # PollingBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Default properties for the jmri.jmrix.rps.swing.polling package
 
@@ -14,9 +14,14 @@ TitleTypeCol        = Method
 TitleXCol           = Last X
 TitleYCol           = Last Y
 TitleZCol           = Last Z
+TitleTime           = Last Time
 
 LabelPoll           = Poll
+
 LabelBscMode        = Use BSC Poll
+LabelDirectMode     = Use Direct Poll
+LabelThrottleMode   = Use Throttle Poll
+
 LabelDelay          = Interval
 LabelSetDefault     = Store New Default Values
 
