update from Tim Hatch

--- a/jmri/jmrix/tchtech/serial/nodeconfig/NodeConfigBundle.properties
+++ b/jmri/jmrix/tchtech/serial/nodeconfig/NodeConfigBundle.properties
@@ -1,23 +1,21 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.tchtech.serial.nodeconfig window
 
-WindowTitle    = Provision Node Interface Control
+WindowTitle    = Provision Node Interface Control System
 
 BoxLabelNotes  = Notes
 
 LabelCardSize       = Tab Size:
 LabelNodeAddress    = Node Address (NA):
 LabelNodeType       = Node Type:
-#LabelDelay          = Receive Delay (DL):
 LabelPulseWidth     = Pulse Width:
 LabelMilliseconds   = (milliseconds)
 
 TipNodeAddress      = Enter node address, numbering from 0-255.
 TipNodeType         = Select type of  node.
-#TipDelay            = Delay between receive bytes (10 microsec units), normally 0.
 TipPulseWidth       = Width of pulse for pulsed turnout control (100 to 10000 allowed).
 TipCardSize         = Select number of Lines per Tab.
 TipAddButton        = Add a new node
@@ -47,13 +45,13 @@ CardTypeInput   = Input Tab
 CardTypeOutput  = Output Tab
 CardTypeNone    = No Tab
 
-CardSize16      = 16-bit
+CardSize16      = 16-line
 CardSize24      = 24-bit
-CardSize32      = 32-bit
+CardSize32      = 32-line
 
 HeadingCardAddress = Tab Address
 HeadingCardType    = Tab Type
-HeadingPort        = Port    Bit -
+HeadingPort        = Port    line -
 
 # The following 3 lines are one message, split into three parts to fit space available
 HintCardTypePartA = Please select Tab type
@@ -83,15 +81,15 @@ Error6    = Error - Node Address (NA) is not between 0 and 255.
 #Error8    = Error - Receive Delay (DL) must be positive, please try again.
 #Error9    = Error - Receive Delay (DL) cannot exceed 65535, please try again.
 Error10   = Error - Searchlight definition is not consistent.
-Error11   = Error - All Input and Output cards must precede first 'No Tab'.
-Error12   = This is a NIC design requirement.
-Error13   = Error - NIC must have at least one Input or Output Tab.
-Error14   = Please configure Input and Output Card and try again.
-Error15   = Error - NIC cards must be either 24-bit or 32-bit.
+Error11   = Error - All Input and Output Tab must precede first 'No Tab'.
+Error12   = This is a Node design requirement.
+Error13   = Error - Node must have at least one Input or Output Tab.
+Error14   = Please configure Input and Output Tab and try again.
+Error15   = Error - Node cards must be either 24-bit or 32-bit.
 
-FeedBackAdd     = NIC added. NIC Address =
-FeedBackDelete  = NIC deleted. NIC Address =
-FeedBackUpdate  = NIC updated. NIC Address =
+FeedBackAdd     = Node added. Node Address =
+FeedBackDelete  = Node deleted. Node Address =
+FeedBackUpdate  = Node updated. Node Address =
 
 ConfirmDelete1  = Are you sure you want to delete this node?
 ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
