refactor to single CAN menu

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.21 $
+# Revision $Revision: 1.22 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -30,8 +30,11 @@ MenuItemXPressNet = XPressNet
 MenuItemXPA = XPA
 MenuItemZimo = Zimo
 
+MenuItemCAN = CAN
+
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
+MenuItemSendFrame = Send Frame
 MenuItemFirmwareUpdate = Firmware Update
 MenuItemSlotMonitor = Slot Monitor
 MenuItemMacroCommand = Send Macro
