--- a/jmri/jmrix/tchtech/serial/assignment/ListBundle.properties
+++ b/jmri/jmrix/tchtech/serial/assignment/ListBundle.properties
@@ -1,21 +1,21 @@
 # Sample ResourceBundle properties file
-WindowTitle			= List Node Interface Card Assignments
+WindowTitle			= List Node Interface Control System Assignments
 
-NodePanelName		= Node Interface Cards
+NodePanelName		= Node Interface Control System
 NodeBoxLabel		= Node:
 NodeBoxTip			= Select a configured node
-ShowInputButton		= Show Input Bits
-ShowInputTip		= Select this button to show input bit assignments
-ShowOutputButton	= Show Output Bits
-ShowOutputTip		= Select this button to show output bit assignments
-InputBitsAnd		= input bits and
-OutputBits			=  output bits
-BitsPerCard			=  bits per card
-NoNodesError		= ERROR - no TCH Technology Node Interface Cards were found.
+ShowInputButton		= Show input lines
+ShowInputTip		= Select this button to show input lines assignments
+ShowOutputButton	= Show output lines
+ShowOutputTip		= Select this button to show output lines assignments
+InputBitsAnd		= input lines and
+OutputBits			=  output Lines
+BitsPerCard			=   -Lines per Tab
+NoNodesError		= ERROR - No TCH Technology Node Interface Controls were found.
 
-AssignmentPanelInputName = Input Assignments
-AssignmentPanelOutputName = Output Assignments
-HeadingBit			= Bit
+AssignmentPanelInputName = Tab Input Assignments
+AssignmentPanelOutputName = Tab Output Assignments
+HeadingBit			= Lines
 HeadingAddress		= Address
 HeadingSystemName	= System Name
 HeadingUserName		= User Name
