--- a/jmri/jmrix/tchtech/serial/assignment/ListBundle.properties
+++ b/jmri/jmrix/tchtech/serial/assignment/ListBundle.properties
@@ -1,4 +1,7 @@
-# Sample ResourceBundle properties file
+# Properties for tchtech.assignment
+#
+# $Revision: 1.3 $
+#
 WindowTitle			= List Node Interface Control System Assignments
 
 NodePanelName		= Node Interface Control System
