update from Tim Hatch

--- a/jmri/jmrix/tchtech/TCHTechBundle.properties
+++ b/jmri/jmrix/tchtech/TCHTechBundle.properties
@@ -1,7 +1,7 @@
 # Sample ResourceBundle properties file
 MenuTCHTech     =  TCH Tech Nodes
 
-MenuItemCommandMonitor      = Node Interface Card Monitor
-MenuItemSendCommand         = Send Node Interface Card Command
-MenuItemDiagnostics         = Run Node Interface Card Diagnostic
-MenuItemAssignments         = List Node Interface Card Assignments
+MenuItemCommandMonitor      = Node Interface Control System Monitor
+MenuItemSendCommand         = Send Node Interface Control System Command
+MenuItemDiagnostics         = Run Node Interface Control System Diagnostic
+MenuItemAssignments         = List Node Interface Control System Assignments
