--- a/jmri/jmrix/tchtech/serial/nodeconfig/NodeConfigBundle.properties
+++ b/jmri/jmrix/tchtech/serial/nodeconfig/NodeConfigBundle.properties
@@ -1,6 +1,6 @@
 # NodeConfigBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrix.tchtech.serial.nodeconfig window
 
@@ -19,11 +19,11 @@ TipNodeType         = Select type of  node.
 TipPulseWidth       = Width of pulse for pulsed turnout control (100 to 10000 allowed).
 TipCardSize         = Select number of Lines per Tab.
 TipAddButton        = Add a new node
-TipEditButton       = Edit an existing Node Interface Control
-TipDeleteButton     = Delete an existing Node Interface Control
-TipDoneButton       = Select when done Provisioning Node Interface Control
+TipEditButton       = Edit an existing Node Interface Control System
+TipDeleteButton     = Delete an existing Node Interface Control System
+TipDoneButton       = Select when done Provisioning Node Interface Control System
 TipUpdateButton     = Change node information
-TipCancelButton     = Stop edit without changing Node Interface Control
+TipCancelButton     = Stop edit without changing Node Interface Control System
 
 ButtonAdd           = Add Node
 ButtonEdit          = Edit Node
@@ -45,13 +45,14 @@ CardTypeInput   = Input Tab
 CardTypeOutput  = Output Tab
 CardTypeNone    = No Tab
 
-CardSize16      = 16-line
+CardSize8       = 8-Bit
+CardSize16      = 16-bit
 CardSize24      = 24-bit
 CardSize32      = 32-line
 
 HeadingCardAddress = Tab Address
 HeadingCardType    = Tab Type
-HeadingPort        = Port    line -
+HeadingPort        = Tab    Port -
 
 # The following 3 lines are one message, split into three parts to fit space available
 HintCardTypePartA = Please select Tab type
@@ -63,11 +64,11 @@ HintCardTypePartE = remaining unused Tab
 HintCardTypePartF = addresses.
 # The following 3 lines are one message, split into three parts to fit space available
 HintSearchlightPartA = Click on first bit of
-HintSearchlightPartB = each 2-lead oscillating
+HintSearchlightPartB = each 2-lead alternating signal
 HintSearchlightPartC = Targetlight signal.
 # The following 3 lines are one message, split into three parts to fit space available
 HintSearchlightPartD = No entry needed if no
-HintSearchlightPartE = 2-lead oscillating
+HintSearchlightPartE = 2-lead alternating signal
 HintSearchlightPartF = Targetlight signals.
 
 # All Errorxx lines below must be shorter than the longest NotesStdx line above.
@@ -77,19 +78,16 @@ Error3    = Error when creating new node. Node not added.
 Error4    = Error - No node with entered Node Address(NA), please try again.
 Error5    = Error - Bad character in Node Address (NA), please try again.
 Error6    = Error - Node Address (NA) is not between 0 and 255.
-#Error7    = Error - Bad character in Receive Delay (DL), please try again.
-#Error8    = Error - Receive Delay (DL) must be positive, please try again.
-#Error9    = Error - Receive Delay (DL) cannot exceed 65535, please try again.
 Error10   = Error - Searchlight definition is not consistent.
-Error11   = Error - All Input and Output Tab must precede first 'No Tab'.
-Error12   = This is a Node design requirement.
-Error13   = Error - Node must have at least one Input or Output Tab.
-Error14   = Please configure Input and Output Tab and try again.
-Error15   = Error - Node cards must be either 24-bit or 32-bit.
+Error11   = Error - All Input and Output cards must precede first 'No Tab'.
+Error12   = This is a NICS design requirement.
+Error13   = Error - NICS must have at least one Input or Output Tab.
+Error14   = Please configure Input and Output Card and try again.
+Error15   = Error - NICS cards must be either 24-bit or 32-bit.
 
-FeedBackAdd     = Node added. Node Address =
-FeedBackDelete  = Node deleted. Node Address =
-FeedBackUpdate  = Node updated. Node Address =
+FeedBackAdd     = NICS added. NICS Address =
+FeedBackDelete  = NICS deleted. NICS Address =
+FeedBackUpdate  = NICS updated. NICS Address =
 
 ConfirmDelete1  = Are you sure you want to delete this node?
 ConfirmDelete2  = Any Sensors, Turnouts, or Lights with this node address will be affected.
@@ -99,6 +97,6 @@ ConfirmUpdate2  = Sensor, Turnout, and Light addresses may be affected.
 ConfirmUpdate3  = Are you sure you want to update this node?
 ConfirmUpdateTitle  = Confirm Update
 
-Reminder1  = Remember to save your new TCH Technology Node Interface Tab information to disk.
+Reminder1  = Remember to save your new TCH Technology Node Interface Control System information to disk.
 Reminder2  = Use the Save button in the Preferences window.
 ReminderTitle = Reminder
