add support for an edit-new-roster-item-only frame

--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -106,6 +106,9 @@ FrameOpsProgrammerTitle = Program {0} in Operations Mode (Main Track)
 
 FrameServiceProgrammerSetup = Service Mode (Programming Track) Programmer Setup
 FrameServiceProgrammerTitle = Program {0} in Service Mode (Programming Track)
+
+FrameNewEntrySetup = New Roster Entry Setup
+FrameNewEntryTitle = Create New Roster Entry
 
 PromptCloseWindowNotWrittenDecoder = Some changes have not been written to the decoder. They will be lost. Close window?
 PromptCloseWindowNotWrittenConfig = Some changes have not been written to a configuration file. Close window?
