add a couple more general names

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.22 $
+# Revision $Revision: 1.23 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -21,7 +21,7 @@ MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemNCE = NCE
 MenuItemOakTree = Oak Tree
 MenuItemSPROG = SPROG
-MenuItemTCHTech = TCHTechnology
+MenuItemTCHTech = TCH Tech
 MenuItemTMCC = TMCC (Lionel)
 MenuItemSECSI = SECSI
 MenuItemSRCP = SRCP
@@ -32,16 +32,17 @@ MenuItemZimo = Zimo
 
 MenuItemCAN = CAN
 
-MenuItemCommandMonitor = Command Monitor
-MenuItemSendCommand = Send Command
-MenuItemSendFrame = Send Frame
-MenuItemFirmwareUpdate = Firmware Update
-MenuItemSlotMonitor = Slot Monitor
-MenuItemMacroCommand = Send Macro
-MenuItemMacroEdit = Edit Macro
-MenuItemConsistEdit = Edit Consist
+MenuItemCommandMonitor  = Command Monitor
+MenuItemSendCommand     = Send Command
+MenuItemSendFrame       = Send Frame
+MenuItemFirmwareUpdate  = Firmware Update
+MenuItemSlotMonitor     = Slot Monitor
+MenuItemMacroCommand    = Send Macro
+MenuItemMacroEdit       = Edit Macro
+MenuItemConsistEdit     = Edit Consist
 MenuItemTrackPacketMonitor = DCC Packet Analyzer
-MenuItemClockMon = Monitor Clock
-MenuItemConfigNodes = Configure Nodes
-MenuItemConsole = Console
-
+MenuItemClockMon        = Monitor Clock
+MenuItemConfigNodes     = Configure Nodes
+MenuItemConsole         = Console
+MenuItemDiagnostics     = Run Diagnostics
+MenuItemAssignments     = Display Assignments
