new Create Entry in roster menu

--- a/jmri/jmrit/roster/JmritRosterBundle.properties
+++ b/jmri/jmrit/roster/JmritRosterBundle.properties
@@ -1,9 +1,10 @@
 # JmritRosterBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Default properties for the jmri.jmrit.roster package
 
+MenuItemCreate  = Create Entry ...
 MenuItemImport  = Import Entry ...
 MenuItemExport  = Export Entry ...
 MenuItemCopy    = Copy Entry ...
