Attempt at making a special startup that has testing and pauses so folks (Windows) can see if they have Java and JMRI installed right. Basically one big copy from the starts for DecoderPro. Nothing special in the JMRI part yet.

--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Default properties for the apps package of jmri.
 
@@ -52,6 +52,7 @@ PanelProVersionCredit = PanelPro {0}, part of the JMRI project
 DecoderProVersionCredit = DecoderPro {0}, part of the JMRI project
 PacketProVersionCredit = PacketPro {0}, part of the JMRI project
 PacketScriptVersionCredit = PacketScript {0}, part of the JMRI project
+InstallTestVersionCredit = InstallTest {0}, part of the JMRI project
 
 ConnectionCredit  = Connected via {0} on {1}
 JavaVersionCredit = Java version {0} ({1})
