--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.24 $
+# Revision $Revision: 1.25 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -90,6 +90,7 @@ jmri.jmrix.libusb.UsbViewAction =                   Open USB Device Viewer
 jmri.jmrix.rps.aligntable.AlignTableAction =        Open RPS Receiver Control
 jmri.jmrix.rps.swing.polling.PollTableAction =      Open RPS Polling Control
 jmri.jmrix.rps.swing.debugger.DebuggerAction =      Open RPS Debugger
+jmri.jmrix.rps.swing.soundset.SoundSetAction =      Open RPS Sound Control
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
 jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction= Open RPS Tracking Display
 jmri.jmrix.rps.reversealign.AlignmentPanelAction =  Open RPS Alignment Tool
