add installtest target

--- a/java/build.xml
+++ b/java/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.26 $ -->
+<!-- Revision $Revision: 1.27 $ -->
 
 <!-- This file is part of JMRI.                                             -->
 <!--                                                                        -->
@@ -173,6 +173,19 @@
   <target name="panelpro" depends="debug" description="build and run PanelPro app">
     <property name="antargline" value="PanelProConfig2.xml" />
     <java classname="apps.PanelPro.PanelPro"
+          dir=".." 
+	  fork="yes" >
+       <classpath refid="project.class.path"    />
+       <sysproperty key="java.security.policy" value="lib/security.policy"/> 
+       <sysproperty key="apple.laf.useScreenMenuBar" value="true"/> 
+       <sysproperty key="java.library.path" path=".:lib/"/>       
+       <arg value="${antargline}"/>
+    </java>
+ </target>
+
+  <target name="installtest" depends="debug" description="build and run InstallTest app">
+    <property name="antargline" value="InstallTestConfig2.xml" />
+    <java classname="apps.InstallTest.InstallTest"
           dir=".." 
 	  fork="yes" >
        <classpath refid="project.class.path"    />
