--- a/jmri/jmrix/loconet/sdfeditor/Explanations.properties
+++ b/jmri/jmrix/loconet/sdfeditor/Explanations.properties
@@ -28,7 +28,8 @@ PLAY =  <html><body>Start streaming a sound file fragment. \
         <p>The first argument is the handle number of the fragment to \
         play.  This is matched to a particular sound fragment (WAV file) \
         in the sound project file. \
-        <p>The second argument contains modifiers .... \
+        <p>The second argument controls whether the fragment \
+        will be played once or looped. \
         </body></html>
 
 SDL_VERSION = Document the version of the SDF format used. \
