add a programmer button

--- a/jmri/jmrit/throttle/ThrottleBundle.properties
+++ b/jmri/jmrit/throttle/ThrottleBundle.properties
@@ -1,6 +1,6 @@
 # Throttle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.throttle GUI elements
 
@@ -43,6 +43,7 @@ ConsistNumberHasNotBeenAssigned = Consist number has not been assigned!
 NeedsConsistNumber = Needs consist number
 NoLocoSelected = <No Loco Selected>
 NoConsistSelected = <No Consist Selected>
+ButtonProgram = Program
 
 # ControlPanel
 Button128SS = 128 SS
