change to CBUS label for menu

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.23 $
+# Revision $Revision: 1.24 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -30,7 +30,9 @@ MenuItemXPressNet = XPressNet
 MenuItemXPA = XPA
 MenuItemZimo = Zimo
 
-MenuItemCAN = CAN
+# The MenuItemCAN is currently labelled CBUS, because that's the
+# only CAN-implemented system. We'll have to make this smarter later.
+MenuItemCAN = CBUS
 
 MenuItemCommandMonitor  = Command Monitor
 MenuItemSendCommand     = Send Command
