patch from ROnnie Pinkerton

--- a/jmri/jmrit/throttle/ThrottleBundle.properties
+++ b/jmri/jmrit/throttle/ThrottleBundle.properties
@@ -1,6 +1,6 @@
 # Throttle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.throttle GUI elements
 
@@ -23,6 +23,9 @@ ButtonOk = OK
 ButtonCancel = Cancel
 ErrorOnPage = Errors on page
 SelectTitleTypePrompt = Frame Title Components:
+FrameDecorationsTitle = Frame Decorations:
+FrameBorderOffTitle = Frame Border Off
+FrameSize = 23
 
 # ThrottleFrameTitleTypes parts
 SelectTitleTypeADDRESS = Address
