Add Edit capability to Signal Table

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.30 $
+# Revision $Revision: 1.31 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -22,6 +22,7 @@ TitleTurnoutTable = Turnout Table
 TitleSignalTable  = Signal Table
 TitleLightTable = Light Table
 TitleLogixTable = Logix Table
+TitleTransitTable = Transit Table
 TitleReporterTable = Reporter Table
 TitleMemoryTable = Memory Table
 
@@ -37,15 +38,19 @@ ButtonYesPlus   = Yes - Stop Warnings
 ButtonDelete    = Delete
 
 TitleAddSignal  = Add New Signal
+TitleEditSignal = Edit Signal
 TitleAddSensor  = Add New Sensor
 TitleAddTurnout = Add New Turnout
 TitleAddReporter = Add New Reporter
 TitleAddMemory  = Add New Memory
 TitleAddLight   = Add/Edit Light
 TitleAddBlock   = Add/Edit Block
+TitleAddTransit = Add/Edit Transit
 
 ColumnHeadEnabled = Enabled
 ColumnHeadIntensity = Intensity
+ColumnHeadLit = Lit
+ColumnHeadHeld = Held
 
 StringTripleTurnout = Triple Output
 StringDoubleTurnout = Double Output
@@ -137,6 +142,12 @@ ReminderTitle = Reminder
 ReminderInUse = It is in use by {1} other objects.
 DeletePrompt = Are you sure you want to delete {0}?
 WarningUserName = User Name " {0} " has already been used.
+WarningNoTurnout = Could not provide " {0} " - " {1} ".
+AddNoTurnout = Cannot add signal because could not provide " {0} " - " {1} ".
+WarningEdit = Please finish editing " {0} " before editing " {1} ".
+DuplicateSignalSystemName = Cannot add because " {0} " already exists. To replace an existing signal head, delete it first.
+GrapevineSkippingCreation = Skipping creation of Grapvine signal because " {0} " does not start with GH. 
+InvalidSignalSystemName = Cannot add signal head because " {0} " is not a valid system name, for example, LH5, GH88, IH41.
 
 WarningTitle = Warning
 
