--- a/jmri/jmrix/can/cbus/swing/configtool/ConfigToolBundle.properties
+++ b/jmri/jmrix/can/cbus/swing/configtool/ConfigToolBundle.properties
@@ -1,11 +1,25 @@
 # ConfigToolBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.can.cbus.swing.configtool properties
 
 MenuItemConfigTool = Configuration Tool
 Title = CBUS Configuration Tool
 
-BorderLayoutAddSensor = Add Sensor
-BorderLayoutAddTurnout = Add Turnout
+BorderLayoutEvents      = Events
+BorderLayoutAddSensor   = Create Sensor
+BorderLayoutAddTurnout  = Create Turnout
+
+# note spaces at end of next two
+MsgCaptureNext = Capture  
+MsgCaptureDone = Captured 
+
+LabelEventActive    = Active on: 
+LabelEventInactive  = Inactive on: 
+
+LabelEventClosed    = Closed sends: 
+LabelEventThrown    = Thrown sends: 
+
+ButtonCreate    = Create
+ButtonNext      = Capture Next
