--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.25 $
+# Revision $Revision: 1.26 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -50,6 +50,9 @@ jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 
 # selected items from systems menus
 jmri.jmrix.acela.acelamon.AcelaMonAction =          Open Acela Monitor
+
+jmri.jmrix.can.cbus.swing.console.CbusConsoleAction = Open CBUS Console
+jmri.jmrix.can.cbus.swing.configtool.ConfigToolAction = Open CBUS Config Tool
 
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
 
