--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.24 $
+# Revision $Revision: 1.25 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -48,3 +48,4 @@ MenuItemConfigNodes     = Configure Nodes
 MenuItemConsole         = Console
 MenuItemDiagnostics     = Run Diagnostics
 MenuItemAssignments     = Display Assignments
+MenuItemConfigTool      = Configure Bus Connection
