Add snap-to-grid option to Layout Editor

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -216,6 +216,7 @@ Italic = Italic
 Bold = Bold
 Tooltip = Tooltip
 Fixed = Fixed
+Tristate = Tristate
 WhenClicked = When clicked
 ChangeAspect = change aspect
 AlternateLit = alternate lit
@@ -243,6 +244,8 @@ AllowLayoutControl = Allow Layout Control
 AllowTurnoutAnimation = Allow Turnout Animation
 ShowEditHelp = Show Help Bar in Edit Mode
 ShowEditGrid = Show Grid in Edit Mode
+SnapToGridOnAdd = Snap to Grid when Adding
+SnapToGridOnMove = Snap to Grid when Moving
 NewTitle = New Title
 AddBackground = Add Background Image
 AddTurntable = Add Turntable
