--- a/jmri/jmrit/powerpanel/PowerPanelBundle.properties
+++ b/jmri/jmrit/powerpanel/PowerPanelBundle.properties
@@ -1,9 +1,8 @@
 # PowerPanelBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.powerpanel GUI elements
-#   Made by JBuilder Mon Aug 11 23:13:04 PDT 2003
 
 StatusOn        = On
 StatusOff       = Off
@@ -12,7 +11,7 @@ StatusUnknown   = Unknown
 ButtonOff       = Off
 ButtonOn        = On
 
-TitlePowerPanel = Power Panel
+TitlePowerPanel = Power Control
 
 LabelLayoutPower= Layout power\:
 
