add mini server

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.26 $
+# Revision $Revision: 1.27 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -97,3 +97,6 @@ jmri.jmrix.rps.swing.soundset.SoundSetAction =      Open RPS Sound Control
 jmri.jmrix.rps.rpsmon.RpsMonAction      =           Open RPS Monitor
 jmri.jmrix.rps.trackingpanel.RpsTrackingFrameAction= Open RPS Tracking Display
 jmri.jmrix.rps.reversealign.AlignmentPanelAction =  Open RPS Alignment Tool
+
+# web items
+jmri.web.miniserver.MiniServerAction =              Start Web Miniserver
