add css, xsl, dtd types

--- a/jmri/web/miniserver/servlet/fileservlet/FileServletTypes.properties
+++ b/jmri/web/miniserver/servlet/fileservlet/FileServletTypes.properties
@@ -10,7 +10,12 @@
 .jpg = image/jpg
 
 .html = text/html
+.css = text/css
+.xsl = test/xsl
+
 .xml = text/xml
+.dtd = application/xml-dtd
+
 .txt = text/plain
 
 # a few we only partially do right
