Add Reporter Label to Layout Editor (with Peter Rushworth)

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -146,6 +146,14 @@ SideTrackWidth = Side Track Width
 SideTrackWidthHint = Enter width for side track (1 - 10 allowed).
 MainlineTrackWidth = Mainline Track Width
 MainlineTrackWidthHint = Enter width for mainline track (1 - 10 allowed).
+ReporterName = Reporter Name
+ReporterNameHint = Enter name of Reporter (system name or user name.
+ReporterLocationX = Location: x
+ReporterLocationXHint = Enter horizontal coordinate of upper left corner.
+ReporterLocationY = , y
+ReporterLocationYHint = Enter vertical coordinate of upper left corner.
+AddNewLabel = Add New Label
+ReporterDoneHint = Click to add new Reporter Icon as specified above.
 HideTrack = Hide Track
 HiddenToolTip = Check to hide this track segment when not in edit mode.
 ScaleTrackDiagram = Scale/Translate Track Diagram
@@ -249,6 +257,7 @@ SnapToGridOnMove = Snap to Grid when Moving
 NewTitle = New Title
 AddBackground = Add Background Image
 AddTurntable = Add Turntable
+AddReporter = Add Reporter Label
 EnterTitle = Enter New Title
 SetTrackWidth = Set Track Width
 SetLocation = Save Location and Size
@@ -345,6 +354,7 @@ EntryError = Error in entry
 TryAgain = Please reenter or cancel.
 Error1 = Error - Cannot create or edit a block without a name.\nPlease enter a block name and try again.
 Error2 = Error - Entered value "{0}" is not in the allowed range.\nPlease enter a number from 1 to 10.
+Error2a = Error - Entered value "{0}" is not in the allowed range.
 Error3 = Error in rotation entry:
 Error4 = Error - Physical turnout "{0}" is already linked to a different Panel Turnout.\nPlease enter another turnout name and try again.
 Error5 = Error - You are currently editing this "{0}".\nOnly one editor may be open a the same time.\nPlease cancel or complete that edit and try again.
@@ -359,7 +369,8 @@ Error13 = Error - Cannot delete a ray track because none are within 30 degrees o
 Error14 = Error - Required throat-to-throat arrangement not found. Please set up as two turnouts connected throat-to-throat by a single track segment.
 Error15 = Error - Cannot proceed because there is no turnout is assigned to one or more of the turnout diagrams. Please assign turnout(s) and try again.
 Error16 = Error - Cannot attach Memory to Block because no memory is defined for "{0}. Please enter a Memory defined in the Memory Table and try again.
-
+Error17 = Error - Reporter manager not available. Cannot add Reporter Icon.
+Error18 = Error - Could not provide Reporter {0}. Cannot add Reporter Icon.
 # question messages
 ButtonNo = No
 ButtonYes = Yes
@@ -372,6 +383,7 @@ Question2 = Are you sure you want to remove this point from the panel, along wit
 Question3 = Are you sure you want to remove this level crossing from the panel, along with any connected Track Segments?
 Question4 = Are you sure you want to remove this turntable from the panel, along with any connected Track Segments?
 Warn1 = Warning - Connectivities for block "{0}" in panels "{1}" and "{2}" are not compatible.
+Warn2 = Bean Settings needed for Block operation could not be created. Check that all turnouts have been assigned.
 
 # rename panel error messages
 CanNotRename = Can not rename panel with the same name as an existing panel
