Giorgio T. and Dave D. - adding zooming and antialiasing to Layout Editor

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -11,6 +11,8 @@ MenuPanels    = Panels
 MenuEdit      = Edit
 MenuFile      = File
 MenuTools	  = Tools
+MenuZoom	  = Zoom
+NoZoom        = No Zoom
 
 # colors
 Black = Black
@@ -254,6 +256,7 @@ ShowEditHelp = Show Help Bar in Edit Mode
 ShowEditGrid = Show Grid in Edit Mode
 SnapToGridOnAdd = Snap to Grid when Adding
 SnapToGridOnMove = Snap to Grid when Moving
+AntialiasingOn = Enable antialiasing (Smoother lines)
 NewTitle = New Title
 AddBackground = Add Background Image
 AddTurntable = Add Turntable
