change error handling, refactor tests

--- a/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
+++ b/jmri/jmrix/rps/aligntable/AlignTableBundle.properties
@@ -1,6 +1,6 @@
 # AlignTableBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrix.rps.aligntable package
 
@@ -10,9 +10,11 @@ TitleColNum     = Receiver
 TitleColX       = X
 TitleColY       = Y
 TitleColZ       = Z
+TitleColActive  = Active?
 
 LabelNumCol     = Number of Receivers:
 LabelVSound     = V Sound:
 LabelOffset     = Offset:
+LabelAlgorithm  = Algorithm:
 
 ButtonSet       = Set
