Correction to the Layout Editor correction submitted yesterday

--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.16 $
+# Revision $Revision: 1.17 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -179,7 +179,7 @@ UndoTranslateSelection = Undo Translate Selection
 # help area items
 Help1 = To add an item, check item type, enter needed data, then, with shift down, click on panel - except Track Segment.
 Help2 = To add a Track Segment, with shift down press mouse on one connection point and drag to another connection point.
-Help3 = To move an item, drag it with meta key pressed. To see an item's popup menu, alt-click on it.
+Help3 = To move an item, center drag it with shift key pressed. To see an item's popup menu, alt-click on it.
 Help3Mac = To move an item, drag it with the command key pressed. To show its popup menu, control-click on it.
 Help3Win = To move an item, drag it with the right mouse button. To show its popup menu, right-click on it.
 
