Add operations to jmri

--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Default properties for the apps package of jmri.
 
@@ -17,6 +17,7 @@ MenuItemPreferences = Preferences...
 
 MenuTools    = Tools
 MenuRoster   = Roster
+MenuOperations = Operations
 
 MenuHelp            = Help
 MenuItemWindowHelp  = Window Help ...
