Add Markers to Layout Editor

--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,6 +1,6 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.23 $
+# Revision $Revision: 1.24 $
 #
 # Default properties for the jmrit.display package
 
@@ -21,6 +21,12 @@ DeletePanel = Delete this panel...
 AddLoco     = Add loco
 AddLocoRoster     = Add loco from roster
 RemoveMarkers	= Remove markers
+LocoFromRoster = Loco Marker from Roster
+SelectLoco     = Select loco
+EnterLocoMarker = Enter Loco Marker
+EnterLocoID = Enter Loco ID (6 characters max)
+LocoID         = Loco ID
+OK             = OK
 
 MenuItemScript = Run script...
 
