--- a/jmri/jmrit/display/LayoutEditorBundle.properties
+++ b/jmri/jmrit/display/LayoutEditorBundle.properties
@@ -1,6 +1,6 @@
 # LayoutEditorBundle.properties
 #
-# Revision $Revision: 1.17 $
+# Revision $Revision: 1.18 $
 #
 # Text properties for jmrit.display.LayoutEditor and associated modules
 
@@ -354,6 +354,7 @@ Reminder3 = ( Select 'Store panels...' in the Panels menu or the File menu of an
 # error messages
 Error = Error
 EntryError = Error in entry
+ErrorEnterLocoID = Entry Error - Loco ID required. 
 TryAgain = Please reenter or cancel.
 Error1 = Error - Cannot create or edit a block without a name.\nPlease enter a block name and try again.
 Error2 = Error - Entered value "{0}" is not in the allowed range.\nPlease enter a number from 1 to 10.
