--- a/jmri/jmrit/operations/setup/JmritOperationsSetupBundle.properties
+++ b/jmri/jmrit/operations/setup/JmritOperationsSetupBundle.properties
@@ -1,6 +1,6 @@
 # JmritOperationsBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.operations
 
@@ -56,6 +56,10 @@ East				= East
 West				= West
 North				= North
 South				= South
+
+PrinterFont			= Manifest Printer Font
+SansSerif			= Sans Serif
+Monospaced			= Monospaced
 
 
 
